<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency chat</string>
    <string name="meltdown_warning">Aspie meltdown</string>
    <string name="chat_hint">Message</string>
    <string name="send">Send</string>
    <string name="splash">I gave you my phone because I can\'t use or process speech right now, but I am still capable of text communication.\n
        My hearing and tactile senses are extremely sensitive in this state, so please refrain from touching me.
        Please keep calm, and proceed to the next screen that has a simple chat client through which we can communicate.</string>
    <string name="title_activity_chat">Chat</string>
    <string name="next">Chat</string>
    <string name="action_settings">Emergency chat settings</string>
    <string name="pref_splash">Text</string>
    <string name="pref_splash_summ">Text visible on splash screen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="title_edit_hint">Title</string>
    <string name="splash_edit_hint">Text</string>
    <string name="edit_title">Edit</string>
    <string-array name="settingsNames">
        <item>Splash screens</item>
        <item>Miscellaneous settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
