<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jeroendebusser.aspiemeltdown.Splash"
    android:longClickable="true"
    android:id="@+id/splash_layout"
    android:showDividers="none">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/meltdown_warning"
        android:id="@+id/splash_header"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dip" />

    <TextView
        android:text="@string/splash"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:textSize="25sp"
        android:layout_marginBottom="10dip"
        android:id="@+id/splash_message"
        android:layout_weight="1.0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/button"
        android:onClick="Continue"
        android:layout_marginBottom="5dip" />

</LinearLayout>
